--- a/app/assets/stylesheets/todos.css
+++ b/app/assets/stylesheets/todos.css
@@ -15,6 +15,12 @@
   position: fixed;
 }
 
+.navbar-fixed-bottom
+{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .navbar-bottom .nav > li
 {
   margin-right: 10px;
