Manage Filters dialog up to point where I can remove everything.

--- a/app/assets/templates/dropdowns/manage_filters_modal.jst.ejs
+++ b/app/assets/templates/dropdowns/manage_filters_modal.jst.ejs
@@ -4,23 +4,30 @@
 </div>
 
 <div class="modal-body">
-  <table class='table-bordered table-striped' style='width: 100%'>
-  <thead>
-    <tr>
-      <th style='width: 5%; padding-right: 10px'>Delete</th>
-      <th style='padding-left: 20px; text-align: left'>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% filters.forEach(function(item) { %>
-      <tr>
-        <td><a id='filter-item-<%= item.id %>' href="#" class="btn">Delete Filters</a>
-        </td>
-        <td style='padding-left: 20px'><%= item.get('name') %></td>
-      </tr>
-      <% }); %>
-  </tbody>
-</table>
+
+  <div id='main-manage-filters'>
+    <table class='table-bordered table-striped' style='width: 100%'>
+      <thead>
+        <tr>
+          <th style='width: 10%; padding-right: 10px'>Delete</th>
+          <th style='padding-left: 20px; text-align: left'>Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% filters.forEach(function(item) { %>
+          <tr>
+            <td><a id='filter-item-<%= item.id %>' href="#" class="btn remove-filter-button"><span class='icon-remove' /></a>
+            </td>
+            <td style='padding-left: 20px'><%= item.get('name') %></td>
+          </tr>
+          <% }); %>
+      </tbody>
+    </table>
+  </div>
+
+  <div id='manage-filters-confirmation' style='display:none'>
+  </div>
+
 </div>
 
 <div class="modal-footer">
