--- a/app/assets/templates/dropdowns/manage_filters_confirmation.jst.ejs
+++ b/app/assets/templates/dropdowns/manage_filters_confirmation.jst.ejs
@@ -5,5 +5,5 @@
 </div>
 <div>
   <a id='cancel-filter-removal-confirmation-dialog' href="#" class="btn">Cancel</a>
-  <a class='remove-filter-button-final btn btn-primary' filter-type='<%= filter_type %>' filter-id='<%= filter_id %>' href="#">Remove All</a>
+  <a id='remove-filter-button-final' class='btn btn-primary' filter-type='<%= filter_type %>' filter-id='<%= filter_id %>' href="#">Remove All</a>
 </div>
