Ability to remove a filter from owned todos

--- a/app/assets/templates/dropdowns/manage_filters_modal.jst.ejs
+++ b/app/assets/templates/dropdowns/manage_filters_modal.jst.ejs
@@ -18,7 +18,7 @@
           <tr>
             <td><a id='filter-item-<%= item.id %>' href="#" class="btn remove-filter-button"><span class='icon-remove' /></a>
             </td>
-            <td style='padding-left: 20px'><%= item.get('name') %></td>
+            <td class='remove-filter-name' style='padding-left: 20px'><%= item.get('name') %></td>
           </tr>
           <% }); %>
       </tbody>
