Add tickler feature

--- a/app/assets/templates/todos/table_row.jst.ejs
+++ b/app/assets/templates/todos/table_row.jst.ejs
@@ -5,7 +5,16 @@
     <span id='todo-<%= todo.id %>-editor' style='display:none'></span>
   </td>
   <td>
-    <a id='todo-edit-<%= todo.id %>' class='edit-todo-link' href='#'><span class='icon-pencil'></span></a>
-    <a id='todo-delete-<%= todo.id %>' class='delete-todo-link' href='#'><span class='icon-remove'></span></a>
+    <% if(todo.tickler == true) { %>
+      <a id='todo-tickler-<%= todo.id %>' class='toggle-tickler-status-link' href='#' title='Remove from tickler'>
+        <span class='icon-arrow-left'></span>
+      </a>
+    <% } else { %>
+      <a id='todo-tickler-<%= todo.id %>' class='toggle-tickler-status-link' href='#' title='Move to tickler'>
+        <span class='icon-arrow-right'></span>
+      </a>
+    <% } %>
+    <a id='todo-edit-<%= todo.id %>' class='edit-todo-link' href='#' title='Edit todo'><span class='icon-pencil'></span></a>
+    <a id='todo-delete-<%= todo.id %>' class='delete-todo-link' href='#' title='Delete todo'><span class='icon-remove'></span></a>
   </td>
 </tr>
