--- a/app/assets/templates/todos/table_row.jst.ejs
+++ b/app/assets/templates/todos/table_row.jst.ejs
@@ -5,6 +5,7 @@
     <span id='todo-<%= todo.id %>-editor' style='display:none'></span>
   </td>
   <td>
+    <a id='todo-edit-<%= todo.id %>' class='edit-todo-link' href='#' title='Edit todo'><span class='icon-pencil'></span></a>
     <% if(todo.tickler == true) { %>
       <a id='todo-tickler-<%= todo.id %>' class='toggle-tickler-status-link' href='#' title='Remove from tickler'>
         <span class='icon-arrow-left'></span>
@@ -14,7 +15,7 @@
         <span class='icon-arrow-right'></span>
       </a>
     <% } %>
-    <a id='todo-edit-<%= todo.id %>' class='edit-todo-link' href='#' title='Edit todo'><span class='icon-pencil'></span></a>
+    <a class='defer-link' href='#' title='Defer Todo'><span class='icon-time'></span></a>
     <a id='todo-delete-<%= todo.id %>' class='delete-todo-link' href='#' title='Delete todo'><span class='icon-remove'></span></a>
   </td>
 </tr>
