--- a/app/assets/templates/todos/table_row.jst.ejs
+++ b/app/assets/templates/todos/table_row.jst.ejs
@@ -1,7 +1,7 @@
 <tr id='todo-row-<%= todo.id %>'>
   <td><input id='todo-complete-<%= todo.id %>' <%= todo.completed ? "checked" : "" %> class='complete-checkbox' type='checkbox' name='todos[<%= todo.id %>][complete]'/></td>
   <td>
-    <span id='todo-<%= todo.id %>'><%= todo.description%></span>
+    <span id='todo-<%= todo.id %>' class='js-description'><%= todo.description%></span>
     <span id='todo-<%= todo.id %>-editor' style='display:none'></span>
   </td>
   <td>
