Update gems, upgrade to Bootstrap 3

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,8 +1,6 @@
-$baseFontSize: 12px;
+$font-size-base: 13px;
 
 @import "bootstrap";
-
-@import "bootstrap-responsive";
 
 body {
   padding-top: 100px;
