--- a/app/views/frontpage/_help_box.html.erb
+++ b/app/views/frontpage/_help_box.html.erb
@@ -7,7 +7,7 @@
     <li><strong>@</strong> &mdash; Assign the todo to a Context, e.g., <strong>@home</strong> or <strong>@work</strong></li>
     <li><strong>+</strong> &mdash; Assign the todo to a Project, e.g., <strong>+research-paper</strong></li>
     <li><strong>#</strong> &mdash; Assign the todo to a Tag, e.g., <strong>#purchases</strong></li>
-    <li>Click a <a class='label'>badge</a> to filter the list or use the dropdowns below</li>
+    <li>Click a <a class='label label-default' href='javascript:void(0)'>badge</a> to filter the list or use the dropdowns below</li>
   </ul>
 
   <a id='dismiss-help' href='#'>Dismiss this</a>
