--- a/app/views/todos/_todolist.html.erb
+++ b/app/views/todos/_todolist.html.erb
@@ -1,7 +1,7 @@
-<table class='table-bordered table-striped todo-list-table' style='width: 100%'>
+<table class='table table-hover table-bordered table-striped todo-list-table' style='width: 100%'>
   <thead>
     <tr>
-      <th style='width: 3%'><span class='icon-check'></span></th>
+      <th style='width: 3%'><span class='glyphicon glyphicon-check'></span></th>
       <th>Task</th>
       <th style='width: 50px'>Actions</th>
     </tr>
