--- a/app/assets/templates/dropdowns/manage_filters_confirmation.jst.ejs
+++ b/app/assets/templates/dropdowns/manage_filters_confirmation.jst.ejs
@@ -4,6 +4,6 @@
   references within associated todos.
 </div>
 <div>
-  <a id='cancel-filter-removal-confirmation-dialog' href="#" class="btn">Cancel</a>
+  <a id='cancel-filter-removal-confirmation-dialog' href="#" class="btn btn-default">Cancel</a>
   <a id='remove-filter-button-final' class='btn btn-primary' filter-type='<%= filter_type %>' filter-id='<%= filter_id %>' href="#">Remove All</a>
 </div>
