--- a/app/assets/templates/dropdowns/manage_filters_modal.jst.ejs
+++ b/app/assets/templates/dropdowns/manage_filters_modal.jst.ejs
@@ -1,35 +1,42 @@
-<div class="modal-header">
-  <button class="close" data-dismiss="modal">×</button>
-  <h3>Manage <%= filter_type %></h3>
-</div>
+<div class='modal-dialog'>
+  <div class='modal-content'>
+    <div class="modal-header">
+      <button class="close" data-dismiss="modal">×</button>
+      <h3>Manage <%= filter_type %></h3>
+    </div>
 
-<div class="modal-body">
+    <div class="modal-body">
 
-  <div id='main-manage-filters'>
-    <table class='table-bordered table-striped' style='width: 100%'>
-      <thead>
-        <tr>
-          <th style='width: 10%; padding-right: 10px'>Delete</th>
-          <th style='padding-left: 20px; text-align: left'>Name</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% filters.forEach(function(item) { %>
+      <div id='main-manage-filters'>
+        <table class='table table-hover table-bordered table-striped' style='width: 100%'>
+          <thead>
+            <tr>
+              <th style='width: 10%; padding-right: 10px'>Delete</th>
+              <th style='padding-left: 20px; text-align: left'>Name</th>
+            </tr>
+          </thead>
+          <tbody>
+          <% filters.forEach(function(item) { %>
           <tr>
-            <td><a id='filter-item-<%= item.id %>' href="#" class="btn remove-filter-button"><span class='icon-remove' /></a>
-            </td>
-            <td class='remove-filter-name' style='padding-left: 20px'><%= item.get('name') %></td>
-          </tr>
-          <% }); %>
-      </tbody>
-    </table>
+            <td>
+              <a id='filter-item-<%= item.id %>' href="#" class="remove-filter-button action">
+                <span class='glyphicon glyphicon-remove' />
+                </a>
+              </td>
+              <td class='remove-filter-name' style='padding-left: 20px'><%= item.get('name') %></td>
+            </tr>
+            <% }); %>
+            </tbody>
+          </table>
+        </div>
+
+        <div id='manage-filters-confirmation' style='display:none'>
+        </div>
+
+      </div>
+
+      <div class="modal-footer">
+        <a id='close-manage-filters-modal' href="#" class="btn btn-default" data-dismiss='modal'>Close</a>
+      </div>
   </div>
-
-  <div id='manage-filters-confirmation' style='display:none'>
-  </div>
-
-</div>
-
-<div class="modal-footer">
-  <a id='close-manage-filters-modal' href="#" class="btn">Close</a>
 </div>
