Further reduce wasted vertical space

--- a/app/assets/stylesheets/todos.css.scss
+++ b/app/assets/stylesheets/todos.css.scss
@@ -20,7 +20,7 @@ a.action{
 
 
 .todo-tabs {
-  margin-top: 8px;
+  margin-top: 3px;
 }
 
 .struck-through
@@ -35,4 +35,19 @@ a.action{
 
 .todos-filter-dropdowns {
   margin-top: 8px;
+}
+
+#help-container {
+  margin-top: 15px;
+}
+
+.welcome {
+  vertical-align: -17px;
+  font-weight: bold;
+}
+
+#filter {
+  margin-left: 20px;
+  font-weight: bold;
+  vertical-align: -10px;
 }
