--- a/app/assets/templates/todos/table_row.jst.ejs
+++ b/app/assets/templates/todos/table_row.jst.ejs
@@ -1,10 +1,10 @@
-<tr id='todo-row-<%= todo.id %>'>
-  <td><input id='todo-complete-<%= todo.id %>' <%= todo.completed ? "checked" : "" %> class='complete-checkbox' type='checkbox' name='todos[<%= todo.id %>][complete]'/></td>
-  <td>
+<tr id='todo-row-<%= todo.id %>' data-todo_id='<%= todo.id %>'>
+  <td class='main'>
+    <span class='ui-icon ui-icon-grip-dotted-vertical gripper' todo-gripper></span>
+    <input id='todo-complete-<%= todo.id %>' <%= todo.completed ? "checked" : "" %> class='complete-checkbox' type='checkbox' name='todos[<%= todo.id %>][complete]'/>
     <span id='todo-<%= todo.id %>' class='js-description'><%= todo.description%></span>
     <span id='todo-<%= todo.id %>-editor' style='display:none'></span>
-  </td>
-  <td>
+  <td class='actions'>
     <% if(todo.tickler == true) { %>
       <a id='todo-tickler-<%= todo.id %>' class='toggle-tickler-status-link action' href='#' title='Remove from tickler'>
         <span class='glyphicon glyphicon-arrow-left'></span>
