--- a/app/views/todos/_todolist.html.erb
+++ b/app/views/todos/_todolist.html.erb
@@ -1,11 +1,4 @@
-<table class='table table-hover table-bordered table-striped todo-list-table' style='width: 100%'>
-  <thead>
-    <tr>
-      <th style='width: 3%'><span class='glyphicon glyphicon-check'></span></th>
-      <th>Task</th>
-      <th style='width: 50px'>Actions</th>
-    </tr>
-  </thead>
+<table class='table table-hover table-bordered todo-list-table' style='width: 100%'>
   <tbody>
   </tbody>
 </table>
