--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,12 +47,12 @@
     <div class='container main-content'>
       <% unless flash.empty? %>
         <div class='row'>
-          <div class='span4 offset4'>
+          <div class='col-md-4 col-md-offset-4'>
             <% if notice %>
               <p class="alert alert-info"><%= notice %></p>
             <% end %>
             <% if alert %>
-              <p class="alert alert-error"><%= alert %></p>
+              <p class="alert alert-danger"><%= alert %></p>
             <% end %>
           </div>
         </div>
