Don't allow completed todos to be sorted

--- a/app/assets/templates/todos/table_row.jst.ejs
+++ b/app/assets/templates/todos/table_row.jst.ejs
@@ -1,6 +1,8 @@
 <tr class='todo-row' id='todo-row-<%= todo.id %>' data-todo_id='<%= todo.id %>'>
   <td class='main'>
-    <span class='ui-icon ui-icon-grip-dotted-vertical gripper' todo-gripper></span>
+    <% if (!todo.completed) { %>
+      <span class='ui-icon ui-icon-grip-dotted-vertical gripper' todo-gripper></span>
+      <% } %>
     <input id='todo-complete-<%= todo.id %>' <%= todo.completed ? "checked" : "" %> class='complete-checkbox' type='checkbox' name='todos[<%= todo.id %>][complete]'/>
     <span id='todo-<%= todo.id %>' class='js-description'><%= todo.description%></span>
     <span id='todo-<%= todo.id %>-editor' style='display:none'></span>
